css/mobile.css
header, footer {
    background-color: var(--valhalla);
    color: var(--white);
}

button,
.send-message-button,
.confirm-project-button {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    background-color: var(--grey);
    border-style: none;
    height: 3.75rem;
    border-radius: 0.5rem;
}

.validation-error {
    color: var(--red);
    font-family: "Roboto", sans-serif;
    font-size: 0.75rem;
    /* background-color: grey; */
}

/* === HEADER === */

.header-container {
    height: 500px;
    margin: 0;
    padding-top: 10px;
}

.logo-and-navbar {
    padding: 0 1rem;
    display: flex;
    justify-content: space-between;
}

.header-logo,
.footer-logo {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 2.25rem;
}

.logo-desktop {
    color: var(--grey);
}

.logo-common {
    color: var(--gold);
}

.logo-desktop-header {
    display: none;
}

.fa-bars {
    font-size: 2.25rem;
    color: var(--white);
}

.header-menu {
    position: absolute;
    background-color: var(--valhalla);
    width: 100%;
    top: 5.625rem;
    left: 0;
    z-index: 1;
    border-top: 1px solid var(--grey);
    border-bottom: 1px solid var(--grey);
}

.header-menu ul {
    margin: 0;
    display: flex;
    flex-direction: column;
    /* gap: 1rem; */
    height: 17.875rem;
    justify-content: space-evenly;
}

.header-menu li {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    width: 100%;
}

.menu-opened {
    color: var(--gold);
}

.selected-link {
    color: var(--grey);
}

h1 {
    font-family: "League Gothic", sans-serif;
    font-weight: 400;
    font-size: 6rem;
    line-height: 6rem;
    text-align: center;
    margin: 3.5rem auto 0 auto;
    max-width: 360px;
}

.h1-description {
    font-family: "League Spartan", sans-serif;
    font-weight: 400;
    font-size: 2rem;
    line-height: 1.84rem;
    text-align: center;
    letter-spacing: 0.8rem;
    margin-top: 2rem;
}

/* === MAIN === */

main {
    color: var(--valhalla);
}

main h2 {
    font-family: "League Spartan", sans-serif;
    font-weight: 700;
    font-size: 2rem;
}

.about-me p,
article p {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.171875rem;
}

/* --- home --- */

.container-home {
    padding: 5.25rem 1rem;
}

.main-photo {
    /* for testing */
    width: 100%;
    padding-top: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 1rem;
}

.about-me {
    margin-top: 4.0625rem;
}

.about-me p {
    margin-top: 1.0625rem
}

.skills {
    margin-top: 2.5rem;

}

.skill-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2.40625rem;
    margin-top: 2rem;
    margin-bottom: 5.25rem;

}

.skill-list li {
    display: flex;
    gap: 0.625rem;
    height: 4rem;
}

.skill-description {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.171875rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.skill-description p {
    color: var(--grey);
}


.indicator {
    display: flex;
    flex-direction: row;
    gap: 0.75rem;
}

.indicator-dot {
    width: 0.75rem;
    height: 0.75rem;
    border: 1px solid var(--valhalla);
    border-radius: 50%;
}

.indicator-dot-filled {
    background-color: var(--valhalla);
}

.projects-carousel {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2.5625rem;
}

.project-card {
    width: 18.75rem;
    height: 28.75rem;
    background-image: url(./../img/project-bg.jpeg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    font-family: "Roboto", sans-serif;
    color: var(--white);
    border-radius: 1rem;
    position: relative;
    filter: drop-shadow(0, 4px, 4px, #00000040);
    padding: 1.125rem 1.5625rem;
}

.delete-project-button {
    z-index: 5;
    background-color: var(--delete-button-grey);
    height: 2.5rem;
    width: 2.5rem;
    position: absolute;
    bottom: 1.125rem;
    right: 1.125rem;
}

.card-blur {
    width: 18.75rem;
    height: 28.75rem;
    background: linear-gradient(180deg, #000000ff, #00000000);
    filter: drop-shadow(0, 4px, 4px, 00000040);
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    border-radius: 1rem;
}

.project-card h3 {
    position: relative;
    font-weight: 700;
    font-size: 1.25rem;
    z-index: 2;
}

.project-card ul {
    list-style: inside;
    position: relative;
    z-index: 2;
    margin-top: 2.5rem;
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    padding-left: 0.5rem;
}

.project-card li {
    font-weight: 400;
}

.project-btns-container {
    margin-top: 5.25rem;
    display: flex;
    justify-content: center;
    gap: 3.4375rem;
}

.switch-proj-btn {
    width: 3.75rem;
}

/* --- project --- */

.container-projects {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.add-project-btn {
    width: 15rem;
    margin-top: 5.25rem;
}

.projects-list {
    margin: 5.25rem 0 2.5625rem 0;
    display: flex;
    flex-direction: column;
    gap: 2.5625rem;
}

/* --- modal --- */

.blur-for-modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100%;
    backdrop-filter: blur(4px);
    z-index: 2;
}

.add-project-container {
    position: fixed;
    width: 18.75rem;
    top: calc(50vh - 10.25rem);
    left: calc(50vw - 9.375rem);
    z-index: 5;
    background-color: var(--white);
    padding: 2.5rem 0.625rem;
}

.add-project-container label {
    font-family: "League spartan", sans-serif;
    font-weight: 700;
    display: block;
}

.add-project-container .input-container {
    width: 100%;
}

.add-project-container .input-container input {
    font-size: 1rem;
    line-height: 1.171875rem;
    width: 100%;
    margin-top: 1.6875rem;
    border: none;
    border-bottom: 2px solid var(--valhalla);
}

.add-project-container .input-error {
    border-bottom: 2px solid var(--red);
}

.add-project-container .validation-error {
    margin-top: 0.360625rem;
    margin-bottom: 1.92375rem;
    line-height: 0.87875rem;
    height: 0.87875rem;
}


.add-project-container .cancel-button {
    background-color: var(--white);
    font-size: 0.75rem;
    position: absolute;
    width: 0.75rem;
    height: 0.75rem;
    top: 0.75rem;
    right: 0.75rem;
}

.confirm-project-button {
    width: 15rem;
    margin: 0 auto;
}

.project-form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* --- message --- */

.message-container {
    font-family: "League Spartan", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    line-height: 0.92rem;
}

/* === FOOTER === */

.footer-container {
    height: 232px;
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    padding: 3.75rem 0;
}

.contact-and-copyright {
    margin: 0 auto;
    width: fit-content;
    display: flex;
    flex-direction: column;
    line-height: 2.875rem;
}

.copyright {
    font-size: 1.6875rem;
}

